<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.home.HomeFragment">

    <TextView
        android:id="@+id/tv_oil_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:padding="10dp"
        android:text="今日油价"
        android:textSize="18sp"
        android:textColor="@color/purple_200"
        android:background="@drawable/bg_white_corner"/>

    <TextView
        android:id="@+id/tv_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="20dp"
        android:text="测试"/>

    <EditText
        android:id="@+id/et_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="40sp"
        android:textColor="@color/purple_200"
        android:inputType="text"
        android:hint="@string/hint_random_text_test"
        android:text="@string/text_home" />

    <TextView
        android:id="@+id/tv_random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:textSize="20sp"
        android:text="@string/text_random_text"
        android:layout_marginBottom="20dp"/>

</FrameLayout>