<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="end"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_province_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:viewBindingIgnore="true"
        android:text="@string/text_province"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_province"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_choose"
        android:textColor="@color/gray_333333"
        android:textColorHint="@color/gray_333333"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="@id/tv_province_label"
        app:layout_constraintTop_toBottomOf="@id/tv_province_label"/>

    <TextView
        android:id="@+id/tv_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:viewBindingIgnore="true"
        android:text="@string/text_date"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_province"
        app:layout_constraintLeft_toLeftOf="@id/tv_province_label"/>

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_choose"
        android:textColor="@color/gray_333333"
        android:textColorHint="@color/gray_333333"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="@id/tv_province_label"
        app:layout_constraintTop_toBottomOf="@id/tv_date_label"/>

    <TextView
        android:id="@+id/tv_filter_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        android:padding="10dp"
        android:text="@string/text_sure"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>