<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.oil.history.AddOilHistoryActivity">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            style="@style/title_back"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_add_oil_history"
            style="@style/title_text"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@color/white"
        android:padding="@dimen/dp_10"
        app:layout_constraintTop_toBottomOf="@id/rl_title">
        <TextView
            android:id="@+id/tv_100_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_hundred_oil"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/tv_hundred_oil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_10"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_100_label"
            app:layout_constraintRight_toLeftOf="@+id/tv_oil_unit"/>

        <TextView
            android:id="@+id/tv_oil_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_oil_unit"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_100_label"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/tv_month_oil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_month_average_oil"
            android:layout_marginTop="@dimen/dp_10"
            app:layout_constraintLeft_toLeftOf="@+id/tv_100_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_100_label"/>

        <TextView
            android:id="@+id/tv_month_average_oil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_10"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_month_oil"
            app:layout_constraintRight_toLeftOf="@+id/tv_month_oil_unit"/>

        <TextView
            android:id="@+id/tv_month_oil_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_oil_unit"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_month_oil"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/cl_info"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>