<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginBottom="10dp"
    android:background="@drawable/bg_white_corner"
    android:padding="15dp">

    <TextView
        android:id="@+id/tv_province"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/purple_200"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="福建"
        />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/light_blue"
        tools:text="2022-03-08"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_province"/>

    <TextView
        android:id="@+id/tv_ninety_two_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_92"
        android:textColor="@color/gray_333333"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_province"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:id="@+id/tv_ninety_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_333333"
        app:layout_constraintLeft_toRightOf="@+id/tv_ninety_two_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_ninety_two_label"
        />

    <TextView
        android:id="@+id/tv_ninety_five_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_95"
        android:textColor="@color/gray_333333"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toRightOf="@+id/tv_ninety_two"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_ninety_two_label"
        />
    <TextView
        android:id="@+id/tv_ninety_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_333333"
        app:layout_constraintLeft_toRightOf="@+id/tv_ninety_five_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_ninety_two_label"
        />

    <TextView
        android:id="@+id/tv_ninety_eight_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_98"
        android:textColor="@color/gray_333333"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toRightOf="@+id/tv_ninety_five"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_ninety_two_label"
        />
    <TextView
        android:id="@+id/tv_ninety_eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_333333"
        app:layout_constraintLeft_toRightOf="@+id/tv_ninety_eight_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_ninety_two_label"
        />

    <TextView
        android:id="@+id/tv_zero_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_0"
        android:textColor="@color/gray_333333"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toRightOf="@+id/tv_ninety_eight"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_ninety_two_label"
        />
    <TextView
        android:id="@+id/tv_zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_333333"
        app:layout_constraintLeft_toRightOf="@+id/tv_zero_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_ninety_two_label"
        />

</androidx.constraintlayout.widget.ConstraintLayout>